# real-time-tts-with-llm

./: pyproject.toml
